# recoleta

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  archive.html  docker-compose.yml  index.html  main.py  manifest.json  pyproject.toml  recoleta.bench.yaml  recoleta.example.yaml
.github/: pull_request_template.md
artifacts/: day--2026-02-23--trend--69.md  day--2026-02-24--trend--70.md  day--2026-02-25--trend--71.md  day--2026-02-28--trend--72.md  day--2026-03-02--trend--278.md  day--2026-03-02--trend--63.md  day--2026-03-03--trend--279.md  day--2026-03-03--trend--64.md  day--2026-03-04--trend--280.md  day--2026-03-04--trend--65.md  day--2026-03-05--trend--281.md  day--2026-03-05--trend--66.md  day--2026-03-06--trend--282.md  day--2026-03-06--trend--67.md  day--2026-03-07--trend--283.md  day--2026-03-07--trend--68.md  day--2026-03-08--trend--284.md  day--2026-03-08--trend--69.md  day--2026-03-09--trend--301.md  day--2026-03-09--trend--330.md  day--2026-03-09--trend--77.md  day--2026-03-09--trend--81.md  day--2026-03-10--trend--346.md  day--2026-03-10--trend--378.md  day--2026-03-10--trend--85.md  day--2026-03-10--trend--93.md  day--2026-03-11--trend--392.md  day--2026-03-11--trend--422.md  day--2026-03-12--trend--435.md  day--2026-03-12--trend--459.md  day--2026-03-13--trend--462.md  day--2026-03-13--trend--472.md  day--2026-03-14--trend--474.md  day--2026-03-14--trend--484.md  day--2026-03-15--trend--486.md  day--2026-03-15--trend--487.md  week--2026-W10--trend--285.md  week--2026-W10--trend--70.md  week--2026-W11--trend--488.md  week--2026-W11--trend--489.md
assets/: site.css
benchmarks/: trends_agent_eval_windows.json
en/: archive.html  index.html  manifest.json
ideas/: embodied-ai--day--2026-03-09--ideas.html  embodied-ai--day--2026-03-10--ideas.html  embodied-ai--day--2026-03-11--ideas.html  embodied-ai--day--2026-03-12--ideas.html  embodied-ai--day--2026-03-15--ideas.html  embodied-ai--week--2026-W10--ideas.html  embodied-ai--week--2026-W11--ideas.html  index.html  software-intelligence--day--2026-03-09--ideas.html  software-intelligence--day--2026-03-10--ideas.html  software-intelligence--day--2026-03-11--ideas.html  software-intelligence--day--2026-03-12--ideas.html  software-intelligence--day--2026-03-13--ideas.html  software-intelligence--day--2026-03-14--ideas.html  software-intelligence--day--2026-03-15--ideas.html  software-intelligence--week--2026-W10--ideas.html  software-intelligence--week--2026-W11--ideas.html
items/: embodied-ai--2026-03-02--2x-qwen-3-5-on-m1-mac-9b-builds-a-bot-0-8b-runs-it.html  embodied-ai--2026-03-02--a-social-platform-where-humans-and-ai-agents-coexist-mit-self-hostable.html  embodied-ai--2026-03-02--agentic-code-reasoning.html  embodied-ai--2026-03-02--ai-architecture-pattern-manager-togaf-abb-sbb-pbc-with-neo4j.html  embodied-ai--2026-03-02--ai-first-application-development.html  embodied-ai--2026-03-02--ai-is-creeping-into-election-campaigns-nz-s-rules-aren-t-ready.html  embodied-ai--2026-03-02--architecture-aware-multi-design-generation-for-repository-level-feature-addition.html  embodied-ai--2026-03-02--ask-hn-how-did-you-figure-out-what-research-field-you-were-passionate-about.html  embodied-ai--2026-03-02--ata-bridging-implicit-reasoning-with-attention-guided-and-action-guided-inference-for-vision-language-action-models.html  embodied-ai--2026-03-02--bounded-plasticity-simulation.html  embodied-ai--2026-03-02--cavaro-one-platform-for-design-docs-and-architecture-diagrams.html  embodied-ai--2026-03-02--compliance-as-code-a-study-of-linux-distributions-and-beyond.html  embodied-ai--2026-03-02--cuda-agent-large-scale-agentic-rl-for-high-performance-cuda-kernel-generation.html  embodied-ai--2026-03-02--discrete-world-models-via-regularization.html  embodied-ai--2026-03-02--emerging-human-like-strategies-for-semantic-memory-foraging-in-large-language-models.html  embodied-ai--2026-03-02--extension-of-acetone-c-code-generator-for-multi-core-architectures.html  embodied-ai--2026-03-02--fast-biology-bounties.html  embodied-ai--2026-03-02--from-leaderboard-to-deployment-code-quality-challenges-in-av-perception-repositories.html  embodied-ai--2026-03-02--gendb-the-next-generation-of-query-processing-synthesized-not-engineered.html  embodied-ai--2026-03-02--generative-ai-in-software-testing-current-trends-and-future-directions.html  embodied-ai--2026-03-02--graph-based-self-healing-tool-routing-for-cost-efficient-llm-agents.html  embodied-ai--2026-03-02--i-use-5-project-management-tools-at-work-so-i-built-a-unified-task-dashboard.html  embodied-ai--2026-03-02--i-ve-got-the-guns-is-a-wild-government-argument-for-tech-pundits-to-support.html  embodied-ai--2026-03-02--inference-time-safety-for-code-llms-via-retrieval-augmented-revision.html  embodied-ai--2026-03-02--is-code-still-relevant.html  embodied-ai--2026-03-02--kerv-kinematic-rectified-speculative-decoding-for-embodied-vla-models.html  embodied-ai--2026-03-02--lenovo-s-new-ai-assistant-ad-portrays-humans-as-useless.html  embodied-ai--2026-03-02--mean-flow-based-one-step-vision-language-action.html  embodied-ai--2026-03-02--metarca-a-generalizable-root-cause-analysis-framework-for-cloud-native-systems-powered-by-meta-causal-knowledge.html  embodied-ai--2026-03-02--migmate-a-vs-code-extension-for-llm-based-library-migration-of-python-projects.html  embodied-ai--2026-03-02--mist-rl-mutation-based-incremental-suite-testing-via-reinforcement-learning.html  embodied-ai--2026-03-02--musk-s-fossil-data-centres-are-undoing-tesla-s-climate-benefit.html  embodied-ai--2026-03-02--neural-implicit-action-fields-from-discrete-waypoints-to-continuous-functions-for-vision-language-action-models.html  embodied-ai--2026-03-02--nobody-ever-got-fired-for-using-a-struct.html  embodied-ai--2026-03-02--non-markovian-long-horizon-robot-manipulation-via-keyframe-chaining.html  embodied-ai--2026-03-02--non-verbal-real-time-human-ai-interaction-in-constrained-robotic-environments.html  (+1736 more)
presets/: README.md  agents-radar.md  agents-radar.yaml  arxiv-digest.md  (+3 more)
(+18887 files in other folders)
