[project]
name = "recoleta"
version = "0.2.1"
description = "Local-first AI research radar for ingesting, analyzing, and publishing research signals."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.46.0",
    "apscheduler>=3.11.2",
    "arxiv>=2.4.0",
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.2",
    "lancedb>=0.29.2",
    "litellm>=1.76.1",
    "loguru>=0.7.3",
    "markdownify>=1.2.2",
    "openai>=1.109.1",
    "openreview-py>=1.57.1",
    "orjson>=3.11.7",
    "platformdirs>=4.9.2",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-ai==1.64.0",
    "pydantic-settings>=2.13.1",
    "pymupdf4llm>=0.3.4",
    "pypandoc>=1.16.2",
    "python-slugify>=8.0.4",
    "python-telegram-bot>=22.6",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "resend>=2.27.0",
    "rich>=14.3.3",
    "sqlmodel>=0.0.37",
    "tenacity>=9.1.4",
    "trafilatura>=2.0.0",
    "typer>=0.24.1",
]

[project.scripts]
recoleta = "recoleta.cli:main"

[dependency-groups]
dev = [
    "coverage>=7.0",
    "cremona==0.1.2",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["recoleta", "scripts"]

[tool.cremona]
profile = "recoleta"
targets = ["recoleta", "scripts"]
exclude = [
    ".codex-debug*",
    ".git",
    ".pyright",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".worktrees*",
    "*/__pycache__/*",
    "bench-out*",
    "tests",
]
out_dir = "output/refactor-audit"
baseline = "quality/refactor-baseline.json"

[tool.cremona.profiles.recoleta]
base = "generic-python"
queue_order = [
    "pipeline",
    "site/render",
    "translation",
    "sources",
    "storage",
    "cli",
    "rag",
    "other",
]
fallback_subsystem = "other"

[[tool.cremona.profiles.recoleta.subsystems]]
name = "pipeline"
include = ["recoleta/pipeline*"]

[[tool.cremona.profiles.recoleta.subsystems]]
name = "site/render"
include = [
    "recoleta/site*",
    "recoleta/presentation*",
    "recoleta/publish*",
    "recoleta/trend_materialize*",
]

[[tool.cremona.profiles.recoleta.subsystems]]
name = "translation"
include = ["recoleta/translation*"]

[[tool.cremona.profiles.recoleta.subsystems]]
name = "sources"
include = ["recoleta/sources*", "recoleta/extract*"]

[[tool.cremona.profiles.recoleta.subsystems]]
name = "storage"
include = ["recoleta/storage*"]

[[tool.cremona.profiles.recoleta.subsystems]]
name = "cli"
include = ["recoleta/cli*"]

[[tool.cremona.profiles.recoleta.subsystems]]
name = "rag"
include = ["recoleta/rag*"]

[[tool.cremona.profiles.recoleta.signals]]
name = "legacy_keyword_hits"
kind = "regex_count"
pattern = "\\blegacy_kwargs\\b|\\blegacy_[A-Za-z0-9_]*\\b"
points_per = 10
max_points = 6

[[tool.cremona.profiles.recoleta.signals]]
name = "compat_request_wrapper"
kind = "regex_flag"
pattern = "(?s)(?=.*\\*\\*legacy_kwargs)(?=.*request\\s*:\\s*[^=\\n]+?\\|\\s*None\\s*=\\s*None)"
points = 2

[[tool.cremona.profiles.recoleta.routing_bonuses]]
name = "compat_wrapper_pressure"
points = 4
all = [
    { source = "signal", name = "legacy_keyword_hits", op = ">=", value = 25 },
    { source = "signal", name = "compat_request_wrapper", op = ">=", value = 1 },
]

[[tool.cremona.profiles.recoleta.routing_bonuses]]
name = "legacy_coupling_pressure"
points = 3
all = [
    { source = "signal", name = "legacy_keyword_hits", op = ">=", value = 50 },
    { source = "component", name = "coupling_score", op = ">=", value = 10 },
]

[[tool.cremona.profiles.recoleta.routing_bonuses]]
name = "legacy_churn_pressure"
points = 2
all = [
    { source = "signal", name = "legacy_keyword_hits", op = ">=", value = 100 },
    { source = "component", name = "change_score", op = ">=", value = 8 },
]

[tool.cremona.ruff]
warning_min = 11
warning_max = 15
high_min = 16
high_max = 24
critical_min = 25

[tool.cremona.lizard]
ccn_warning_min = 15
ccn_warning_max = 19
ccn_high_min = 20
ccn_high_max = 29
ccn_critical_min = 30
nloc_warning_min = 100
nloc_warning_max = 149
nloc_high_min = 150
nloc_high_max = 199
nloc_critical_min = 200
parameter_warning_min = 7
parameter_warning_max = 8
parameter_high_min = 9
parameter_high_max = 9
parameter_critical_min = 10

[tool.cremona.complexipy]
warning_min = 16
warning_max = 29
high_min = 30
high_max = 49
critical_min = 50

[tool.cremona.vulture]
review_candidate_min = 60
high_confidence_candidate_min = 80

[tool.cremona.history]
lookback_days = 180
min_shared_commits = 2
coupling_ignore_commit_file_count = 25

[tool.cremona.coverage]
coverage_json = ""

[build-system]
requires = ["uv_build>=0.10.4,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "recoleta"
module-root = ""
